<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="8dp"
    tools:context=".ui.MainActivity">



    <TextView
        android:id="@+id/error"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:text="@string/connection_problem"
        android:visibility="gone" />

    <TextView
        android:id="@+id/my_Squad"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="8dp"
        android:text="@string/mySquad"
        android:textSize="26sp"
        android:textStyle="bold" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/my_squad_recycler_view"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/my_Squad"
        tools:listitem="@layout/my_squad_item" />

    <TextView
        android:id="@+id/all_heroes"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/my_squad_recycler_view"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="8dp"
        android:text="@string/all_superheroes"
        android:textSize="26sp"
        android:textStyle="bold" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/all_superheroes"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/all_heroes"
        tools:listitem="@layout/all_heroes_item"
        android:layout_above="@id/progress_bar"/>

    <ProgressBar
        android:id="@+id/progress_bar"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:visibility="gone" />

</RelativeLayout>