<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="8dp"
    tools:context=".ui.HeroDetails">

    <androidx.cardview.widget.CardView
        android:id="@+id/hero_card"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:cardElevation="4dp"
        app:cardCornerRadius="4dp">

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/hero_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="26sp"
                android:textStyle="bold"
                android:text="@string/heroname"
                android:layout_gravity="center_horizontal"/>

            <ImageView
                android:scaleType="fitXY"
                android:id="@+id/hero_image"
                android:layout_width="match_parent"
                android:layout_height="250dp"
                android:contentDescription="@string/superHeroImage"
                android:transitionName="example"/>
        </LinearLayout>
    </androidx.cardview.widget.CardView>

    <TextView
        android:id="@+id/hero_description"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/description"
        android:layout_below="@+id/hero_card"
        android:textAppearance="@style/TextAppearance.AppCompat.Medium"/>

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/fab_hire"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignBaseline="@id/hero_card"
        android:layout_marginTop="245dp"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="16dp"
        app:elevation="4dp"
        app:srcCompat="@drawable/hire_superhero"
        android:visibility="gone"/>

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/fab_fire"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignBaseline="@id/hero_card"
        android:layout_marginTop="245dp"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="16dp"
        app:elevation="4dp"
        app:srcCompat="@drawable/fire_superhero"
        android:visibility="gone"/>
</RelativeLayout>